<resources>
    <string name="app_name">LaaNo</string>
    <string name="app_name_full">LaaNo: Link as a Note</string>
    <string name="placeholder_title">placeholder</string>
    <string name="placeholder_text">This is a placeholder</string>
    <string name="error_database">Cannot access the database, please reinstall the application</string>
    <string name="status_loading">Loading…</string>
    <string name="status_enabled">enabled</string>
    <string name="status_disabled">disabled</string>
    <string name="snackbar_no_permission">Unable to continue, required permission was not granted</string>
    <string name="snackbar_something_wrong">Something went wrong, please try again</string>
    <string name="toast_double_back_press">Press once again to exit</string>
    <string name="toast_error">Error</string>
    <string name="toast_sync_error">Sync error</string>
    <string name="toast_sync_conflict">Sync conflict</string>
    <string name="toast_sync_success">Synced</string>
    <string name="toast_sync_unsynced">Partially synced</string>
    <string name="toast_backup_success">Backed up</string>
    <string name="toast_restore_success">Restored</string>
    <string name="toast_conflict_resolved">Resolved</string>
    <string name="toast_tags_duplicate_removed">Duplicate</string>
    <string name="toast_empty">Empty</string>
    <string name="toast_clipboard_cleared">Clipboard is cleared</string>
    <string name="validation_error_tags_invalid_char">Only alphanumeric and spaces are allowed here, comma is used as the separator</string>
    <string name="drawer_actions_settings">Settings</string>
    <string name="drawer_actions_about">About</string>
    <string name="drawer_actions_add_account">Add account</string>
    <string name="drawer_actions_manage_accounts">Manage accounts</string>
    <string name="drawer_actions_sync_start">Start sync</string>
    <string name="drawer_actions_sync_log">Sync log</string>
    <string name="drawer_actions_sync_in_progress">Sync in progress…</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="snackbar_button_ok">OK</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_keep_notes">Keep Notes</string>
    <string name="dialog_button_upload">Upload</string>
    <string name="dialog_button_download">Download</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_settings">Settings</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="laano_tab_links_title">Links</string>
    <string name="laano_tab_favorites_title">Favorites</string>
    <string name="laano_tab_notes_title">Notes</string>
    <string name="laano_permission_get_accounts">GET ACCOUNTS (Contacts) permission is needed to show the list of existing accounts</string>
    <string name="laano_account_added">A new account has been added</string>
    <string name="laano_offline">Application offline, please enable Internet connection</string>
    <string name="laano_not_syncable">Unable to access the Cloud storage, please log in again</string>
    <string name="laano_shortcut_add_link">Add Link</string>
    <string name="laano_shortcut_add_favorite">Add Favorite</string>
    <string name="laano_shortcut_add_note">Add Note</string>
    <string name="pref_category_application">Application</string>
    <string name="pref_title_links_expanding">Expand Link cards</string>
    <string name="pref_summary_links_expanding">Show all Link\'s Notes when the app is opened</string>
    <string name="pref_title_notes_expanding">Expand Notes</string>
    <string name="pref_summary_notes_expanding">Show the whole card for all Notes when the app is opened</string>
    <string name="pref_title_backup">Backup database</string>
    <string name="pref_title_restore">Restore database</string>
    <string name="pref_category_synchronization">Synchronization</string>
    <string name="pref_title_sync_directory">Directory name on the Cloud storage</string>
    <string name="pref_title_sync_interval">Sync interval</string>
    <string name="pref_sync_interval_manual">Manual mode</string>
    <string name="pref_sync_interval_15m">Every 15 minutes</string>
    <string name="pref_sync_interval_hour">Every hour</string>
    <string name="pref_sync_interval_3h">Every 3 hours</string>
    <string name="pref_sync_interval_day">Once a day</string>
    <string name="pref_sync_interval_notice">(local modifications immediately)</string>
    <string name="pref_title_sync_upload_to_empty">Always upload to the empty storage</string>
    <string name="pref_summary_sync_upload_to_empty">Even synced items are going to be uploaded to the empty Cloud storage</string>
    <string name="pref_title_sync_protect_local">Protect local storage</string>
    <string name="pref_summary_sync_protect_local">If Cloud item is removed, mark synced Local as conflicted instead of delete it</string>
    <string name="pref_category_clipboard">Clipboard</string>
    <string name="pref_title_clipboard_link_get_metadata">Retrieve the metadata for URLs</string>
    <string name="pref_summary_clipboard_link_get_metadata">Download %s of the document and search for the metadata if a URL is found in the clipboard</string>
    <string name="pref_title_clipboard_link_follow">Follow server redirects</string>
    <string name="pref_summary_clipboard_link_follow">Find the target document, then normalize its URL and use it instead the original one</string>
    <string name="pref_title_clipboard_fill_in_forms">Automatically fill in forms</string>
    <string name="pref_summary_clipboard_fill_in_forms">Paste a normalized and extend clipboard content to the new forms</string>
    <string name="pref_title_clipboard_parameter_white_list">Preserve parameters in the URL query</string>
    <string name="pref_summary_clipboard_parameter_white_list">Completely remove the query string from the URL</string>
    <string name="pref_snackbar_backup_failed">Backup is failed</string>
    <string name="pref_snackbar_permission_write_external_storage">WRITE EXTERNAL STORAGE (Access files) permission is needed to store the backup</string>
    <string name="pref_snackbar_restore_failed">Restore is failed: %s</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="actionbar_title_new_favorite">New Favorite</string>
    <string name="actionbar_title_edit_favorite">Edit Favorite</string>
    <string name="actionbar_title_about">About</string>
    <string name="filter_all">All</string>
    <string name="filter_link">Selected Link</string>
    <string name="filter_favorite">Selected Favorite</string>
    <string name="filter_note">Selected Note</string>
    <string name="filter_no_tags">With no Tags</string>
    <string name="filter_unbound">Unbound</string>
    <string name="filter_conflicted">Conflicted</string>
    <string name="add_edit_account_permission_get_accounts">GET ACCOUNTS (Contacts) permission is needed to check the possibility to add a new account</string>
    <string name="add_edit_accounts_unsupported_multiple_accounts">Multiple accounts are not supported yet</string>
    <string name="add_edit_account_nextcloud_description">Nextcloud storage will be used to synchronize the application data</string>
    <string name="add_edit_account_nextcloud_url_hint">Server address https://</string>
    <string name="add_edit_account_nextcloud_url_refresh_description">Refresh connection</string>
    <string name="add_edit_account_nextcloud_server_status_testing">Testing connection…</string>
    <string name="add_edit_account_nextcloud_username_hint">Username</string>
    <string name="add_edit_account_nextcloud_password_hint">Password</string>
    <string name="add_edit_account_nextcloud_login_button">Connect</string>
    <string name="add_edit_account_nextcloud_about">About Nextcloud</string>
    <string name="add_edit_account_nextcloud_auth_status_checking">Checking credentials…</string>
    <string name="add_edit_account_nextcloud_warning_empty_url">A server URL must be specified</string>
    <string name="add_edit_account_nextcloud_info_normalized_url">The server URL has been normalized</string>
    <string name="add_edit_account_nextcloud_warning_malformed_url">The URL is not formatted correctly</string>
    <string name="add_edit_account_nextcloud_warning_waiting_for_service">The service is not ready yet. Waiting…</string>
    <string name="add_edit_account_nextcloud_connection_secure">Secure connection is established</string>
    <string name="add_edit_account_nextcloud_connection_established">Connection is established</string>
    <string name="add_edit_account_nextcloud_connection_unsecure">Secure connection is unavailable</string>
    <string name="add_edit_account_nextcloud_connection_no_network">No network connection</string>
    <string name="add_edit_account_nextcloud_connection_problem">Couldn\'t establish a connection</string>
    <string name="add_edit_account_nextcloud_server_unrecognized">Unrecognized server version or configuration</string>
    <string name="add_edit_account_nextcloud_ssl_problem">SSL initialization failed</string>
    <string name="add_edit_account_nextcloud_unknown_error">Unknown error occurred!</string>
    <string name="add_edit_account_nextcloud_auth_status_wrong">Wrong username or password</string>
    <string name="add_edit_account_nextcloud_auth_exists">An account for the same user and server already exists</string>
    <string name="add_edit_account_nextcloud_timeout">The server is taking to long to respond</string>
    <string name="add_edit_account_nextcloud_successful">Successful access</string>
    <string name="add_edit_account_nextcloud_warning_no_permission">Required permission was not granted</string>
    <string name="add_edit_account_nextcloud_warning_no_account">The account does not exist in the device</string>
    <string name="add_edit_account_nextcloud_canceled">Canceled by the user</string>
    <string name="item_favorites_favorite_to_links_button">Apply Favorite filter to the Links</string>
    <string name="item_favorites_favorite_to_notes_button">Apply Favorite filter to the Notes</string>
    <string name="item_favorites_edit_button">Edit Favorite</string>
    <string name="item_favorites_checkbox">Select Favorite</string>
    <string name="toolbar_favorites_item_action_mode">Switch to Edit mode</string>
    <string name="toolbar_favorites_item_clear_clipboard">Clear clipboard</string>
    <string name="toolbar_favorites_item_filter">Favorite filter</string>
    <string name="toolbar_favorites_search">Search</string>
    <string name="add_edit_link_link_hint">*Link</string>
    <string name="add_edit_link_name_hint">Name</string>
    <string name="add_edit_link_tags_hint">Tags</string>
    <string name="add_edit_link_disabled_hint">Disable the open button, useful for broken links</string>
    <string name="toolbar_links_item_action_mode">Switch to Edit mode</string>
    <string name="toolbar_links_item_expand_all">Expand all cards</string>
    <string name="toolbar_links_item_collapse_all">Collapse all cards</string>
    <string name="toolbar_links_item_filter">Link filter</string>
    <string name="toolbar_links_search">Search</string>
    <string name="toolbar_notes_item_mode_action">Switch to Edit mode</string>
    <string name="toolbar_notes_item_expand_all">Expand all Notes</string>
    <string name="toolbar_notes_item_collapse_all">Collapse all Notes</string>
    <string name="toolbar_notes_item_clear_clipboard">Clear clipboard</string>
    <string name="toolbar_notes_item_filter">Note filter</string>
    <string name="toolbar_notes_item_mode_reading">Switch to the Reading mode</string>
    <string name="toolbar_notes_search">Search</string>
</resources>