<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_notes_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/toolbar_notes_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/toolbar_notes_filter"
        android:icon="@drawable/ic_filter_list_white"
        android:title="@string/toolbar_notes_item_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_notes_action_mode"
        android:title="@string/toolbar_notes_item_mode_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_notes_expand_all"
        android:title="@string/toolbar_notes_item_expand_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_notes_collapse_all"
        android:title="@string/toolbar_notes_item_collapse_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_notes_clear_clipboard"
        android:title="@string/toolbar_notes_item_clear_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_notes_layout_mode"
        android:title="@string/toolbar_notes_item_mode_reading"
        app:showAsAction="never" />
</menu>