<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ LaaNo Android application
  ~
  ~ @author Aleksandr Borisenko <developer@laano.net>
  ~ Copyright (C) 2017 Aleksandr Borisenko
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filter_all"
        android:title="@string/filter_all" />
    <item
        android:id="@+id/filter_link"
        android:title="@string/filter_link" />
    <item
        android:id="@+id/filter_favorite"
        android:title="@string/filter_favorite" />
    <item
        android:id="@+id/filter_note"
        android:title="@string/filter_note" />
    <item
        android:id="@+id/filter_no_tags"
        android:title="@string/filter_no_tags" />
    <item
        android:id="@+id/filter_unbound"
        android:title="@string/filter_unbound" />
    <item
        android:id="@+id/filter_conflicted"
        android:title="@string/filter_conflicted" />
</menu>