<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_favorites_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/toolbar_favorites_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/toolbar_favorites_filter"
        android:icon="@drawable/ic_filter_list_white"
        android:title="@string/toolbar_favorites_item_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_favorites_action_mode"
        android:icon="@drawable/ic_edit_white"
        android:title="@string/toolbar_favorites_item_action_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_favorites_clear_clipboard"
        android:title="@string/toolbar_favorites_item_clear_clipboard"
        app:showAsAction="never" />
</menu>